--- a/docs/docs/cmd/pp/chatbot/chatbot-list.mdx
+++ b/docs/docs/cmd/pp/chatbot/chatbot-list.mdx
@@ -59,7 +59,7 @@ m365 pp chatbot list --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd
       "isManaged": false,
       "versionNumber": 1429641,
       "timezoneRuleVersionNumber": 0,
-      "displayName": "CLI Chatbot",
+      "name": "CLI Chatbot",
       "statusCode": 1,
       "owner": "Doe, John",
       "overwriteTime": "1900-01-01T00:00:00Z",
@@ -77,7 +77,7 @@ m365 pp chatbot list --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd
   <TabItem value="Text">
 
   ```text
-  displayName   botid                                 publishedOn           createdOn             botModifiedOn
+  name   botid                                 publishedOn           createdOn             botModifiedOn
   ------------  ------------------------------------  --------------------  --------------------  --------------------
   CLI Chatbot   23f5f586-97fd-43d5-95eb-451c9797a53d  2022-11-19T19:19:53Z  2022-11-19T10:42:22Z  2022-11-19T20:19:57Z
   ```
@@ -86,7 +86,7 @@ m365 pp chatbot list --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd
   <TabItem value="CSV">
 
   ```csv
-  displayName,botid,publishedOn,createdOn,botModifiedOn
+  name,botid,publishedOn,createdOn,botModifiedOn
   CLI Chatbot,23f5f586-97fd-43d5-95eb-451c9797a53d,2022-11-19T19:19:53Z,2022-11-19T10:42:22Z,2022-11-19T20:19:57Z
   ```
 
@@ -115,7 +115,7 @@ m365 pp chatbot list --environmentName "Default-d87a7535-dd31-4437-bfe1-95340acd
   isManaged | false
   versionNumber | 1429641
   timezoneRuleVersionNumber | 0
-  displayName | CLI Chatbot
+  name | CLI Chatbot
   statusCode | 1
   owner | Doe, John
   overwriteTime | 1900-01-01T00:00:00Z
