--- a/docs/docs/sample-scripts/flow/export-all-flows-in-environment/index.mdx
+++ b/docs/docs/sample-scripts/flow/export-all-flows-in-environment/index.mdx
@@ -36,8 +36,8 @@ This script will get all flows in your default environment and export them as bo
       $exportPath = "$($filename)_$($timestamp)"
       $flowId = $_.Name
       
-      m365 flow export --id $flowId --environmentName $environment --packageDisplayName $_.displayName --path "$exportPath.zip"
-      m365 flow export --id $flowId --environmentName $environment --format json --path "$exportPath.json"
+      m365 flow export --name $flowId --environmentName $environment --packageDisplayName $_.displayName --path "$exportPath.zip"
+      m365 flow export --name $flowId --environmentName $environment --format json --path "$exportPath.json"
   }
 
   Write-Output "Complete"
