--- a/docs/docs/sample-scripts/flow/export-flow-logicapp/index.mdx
+++ b/docs/docs/sample-scripts/flow/export-flow-logicapp/index.mdx
@@ -27,7 +27,7 @@ This script will export the Power Automate flow *Your sample test flow*, make su
   $flowId = $(m365 flow list --environmentName $environmentId --query "[?displayName == 'Your sample test flow']" -o json | ConvertFrom-Json)[0].Name
 
   Write-Output "Getting Flow info..."
-  m365 flow export --environmentName $environmentId --id $flowId --format 'json'
+  m365 flow export --environmentName $environmentId --name $flowId --format 'json'
 
   Write-Output "Complete"
   ```
@@ -40,7 +40,7 @@ This script will export the Power Automate flow *Your sample test flow*, make su
   ENV_NAME=m365 flow environment list --query '[?contains(displayName,`default`)] .name'
   FLOW_NAME=m365 flow list --environmentName $environmentId --query '[?displayName == `Your sample test flow`] .name'
   echo "Exporting your flow"
-  m365 flow export --environmentName $ENV_NAME --id $FLOW_NAME -f 'json'
+  m365 flow export --environmentName $ENV_NAME --name $FLOW_NAME -f 'json'
   ```
 
   </TabItem>
