--- a/docs/docs/sample-scripts/flow/search-flows-for-connection/index.mdx
+++ b/docs/docs/sample-scripts/flow/search-flows-for-connection/index.mdx
@@ -30,7 +30,7 @@ Search all flows as, an administrator, for a specific search string and report r
 
       ForEach ($flow in $flows) {
           Write-Output "Processing $($flow.displayName)..."
-          m365 flow export --id $flow.name --environmentName $env.name --format json --path $path
+          m365 flow export --name $flow.name --environmentName $env.name --format json --path $path
 
           $flowData = Get-Content -Path $path -ErrorAction SilentlyContinue
 
