Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -64,7 +64,8 @@ sidebar_position: 4
 - extended 'spfx project upgrade' with support for 1.18.0 [#5493](https://github.com/pnp/cli-microsoft365/issues/5493)
 - extended 'spfx doctor' with support for 1.18.0 [#5493](https://github.com/pnp/cli-microsoft365/issues/5493)
 - extended 'spfx project doctor' with support for 1.18.0 [#5493](https://github.com/pnp/cli-microsoft365/issues/5493)
-
+- adds visibility option to 'aad m365group add' command. [#5477](https://github.com/pnp/cli-microsoft365/issues/5477)
+- aligns short option for multiple commands. [#5478](https://github.com/pnp/cli-microsoft365/issues/5478)
 
 ## [v6.11.0](https://github.com/pnp/cli-microsoft365/releases/tag/v6.11.0)
 
