Updates release notes and last fixes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -66,6 +66,9 @@ sidebar_position: 4
 - extended 'spfx project doctor' with support for 1.18.0 [#5493](https://github.com/pnp/cli-microsoft365/issues/5493)
 - adds visibility option to 'aad m365group add' command. [#5477](https://github.com/pnp/cli-microsoft365/issues/5477)
 - aligns short option for multiple commands. [#5478](https://github.com/pnp/cli-microsoft365/issues/5478)
+- adds user-friendly option values for 'spo site commsite enable'. [#5199](https://github.com/pnp/cli-microsoft365/issues/5199)
+- enhances 'spo page set' command [#4840](https://github.com/pnp/cli-microsoft365/issues/4840)
+- adds name option to 'teams app remove'. [#5445](https://github.com/pnp/cli-microsoft365/issues/5445)
 
 ## [v6.11.0](https://github.com/pnp/cli-microsoft365/releases/tag/v6.11.0)
 
