--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -69,6 +69,10 @@ sidebar_position: 4
 - adds user-friendly option values for 'spo site commsite enable'. [#5199](https://github.com/pnp/cli-microsoft365/issues/5199)
 - enhances 'spo page set' command [#4840](https://github.com/pnp/cli-microsoft365/issues/4840)
 - adds name option to 'teams app remove'. [#5445](https://github.com/pnp/cli-microsoft365/issues/5445)
+- fixed 'spfx project upgrade' for v1.18.0. [#5500](https://github.com/pnp/cli-microsoft365/issues/5500)
+- fixed docs build
+- updated show login message using spinner. [#5484](https://github.com/pnp/cli-microsoft365/issues/5484)
+- fixed 'planner task list' command without options. [#5503](https://github.com/pnp/cli-microsoft365/issues/5503)
 
 ## [v6.11.0](https://github.com/pnp/cli-microsoft365/releases/tag/v6.11.0)
 
