Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -73,6 +73,7 @@ sidebar_position: 4
 - fixed docs build
 - updated show login message using spinner. [#5484](https://github.com/pnp/cli-microsoft365/issues/5484)
 - fixed 'planner task list' command without options. [#5503](https://github.com/pnp/cli-microsoft365/issues/5503)
+- added interactive mode as default [#5181](https://github.com/pnp/cli-microsoft365/issues/5181)
 
 ## [v6.11.0](https://github.com/pnp/cli-microsoft365/releases/tag/v6.11.0)
 
