Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -12,6 +12,13 @@ sidebar_position: 4
 
 - [aad group remove](../cmd/aad/group/group-remove.mdx) - removes an Azure AD group [#5426](https://github.com/pnp/cli-microsoft365/issues/5426)
 
+**SharePoint:**
+
+- [spo listitem attachment add](../cmd/spo/listitem/listitem-attachment-add.mdx) - adds an attachment to a list item [#5219](https://github.com/pnp/cli-microsoft365/issues/5219)
+- [spo listitem attachment get](../cmd/spo/listitem/listitem-attachment-get.mdx) - gets an attachment from a list item [#5221](https://github.com/pnp/cli-microsoft365/issues/5221)
+- [spo listitem attachment remove](../cmd/spo/listitem/listitem-attachment-remove.mdx) - removes an attachment from a list item [#5220](https://github.com/pnp/cli-microsoft365/issues/5220)
+- [spo listitem attachment set](../cmd/spo/listitem/listitem-attachment-set.mdx) - updates an attachment from a list item [#5222](https://github.com/pnp/cli-microsoft365/issues/5222)
+
 **Tenant:**
 
 - [tenant info get](../cmd/tenant/info/info-get.mdx) - gets information about any tenant [#5389](https://github.com/pnp/cli-microsoft365/issues/5389)
@@ -74,6 +81,8 @@ sidebar_position: 4
 - updated show login message using spinner. [#5484](https://github.com/pnp/cli-microsoft365/issues/5484)
 - fixed 'planner task list' command without options. [#5503](https://github.com/pnp/cli-microsoft365/issues/5503)
 - added interactive mode as default [#5181](https://github.com/pnp/cli-microsoft365/issues/5181)
+- updated aad m365group command only works for m365 groups [#5438](https://github.com/pnp/cli-microsoft365/issues/5438)
+- removed Node 16 workflow
 
 ## [v6.11.0](https://github.com/pnp/cli-microsoft365/releases/tag/v6.11.0)
 
