Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -83,6 +83,8 @@ sidebar_position: 4
 - added interactive mode as default [#5181](https://github.com/pnp/cli-microsoft365/issues/5181)
 - updated aad m365group command only works for m365 groups [#5438](https://github.com/pnp/cli-microsoft365/issues/5438)
 - removed Node 16 workflow
+- aligned options and documentation power platform. [#5411](https://github.com/pnp/cli-microsoft365/issues/5411)
+- renamed option for 'spo user get'. [#5515](https://github.com/pnp/cli-microsoft365/issues/5515)
 
 ## [v6.11.0](https://github.com/pnp/cli-microsoft365/releases/tag/v6.11.0)
 
