make spo user get command return current user if no args are provided

--- a/docs/docs/cmd/spo/user/user-get.mdx
+++ b/docs/docs/cmd/spo/user/user-get.mdx
@@ -49,6 +49,11 @@ Get user by login name for a web
 ```sh
 m365 spo user get --webUrl https://contoso.sharepoint.com/sites/project-x --loginName "i:0#.f|membership|john.doe@mytenant.onmicrosoft.com"
 ```
+Get user logged-in currently
+
+```sh
+m365 spo user get --webUrl https://contoso.sharepoint.com/sites/project-x
+```
 
 ## Response
 
