Enhances 'spo user get' to get the current user. Closes #5513

--- a/docs/docs/cmd/spo/user/user-get.mdx
+++ b/docs/docs/cmd/spo/user/user-get.mdx
@@ -50,6 +50,12 @@ Get user by login name for a web
 m365 spo user get --webUrl https://contoso.sharepoint.com/sites/project-x --loginName "i:0#.f|membership|john.doe@mytenant.onmicrosoft.com"
 ```
 
+Get the currently logged-in user
+
+```sh
+m365 spo user get --webUrl https://contoso.sharepoint.com/sites/project-x
+```
+
 ## Response
 
 <Tabs>
