--- a/docs/docs/cmd/aad/group/group-user-list.mdx
+++ b/docs/docs/cmd/aad/group/group-user-list.mdx
@@ -29,13 +29,13 @@ aad group user list [options]
 
 ## Examples
 
-List all group users from a group specified by ID
+List all group users from a group specified by ID.
 
 ```sh
 m365 aad group user list --groupId 03cba9da-3974-46c1-afaf-79caa2e45bbe
 ```
 
-List all owners from a group specified by display name
+List all owners from a group specified by display name.
 
 ```sh
 m365 aad group user list --groupDisplayName Developers --role Owner
@@ -63,7 +63,7 @@ m365 aad group user list --groupDisplayName Developers --role Owner
   ```text
   id                                    displayName           userPrincipalName                     userType
   ------------------------------------  --------------------  ------------------------------------  --------
-  da52218e-4822-4ac6-b41d-255e2059655e  Adele Vance           AdeleV@contoso.OnMicrosoft.com  Member
+  da52218e-4822-4ac6-b41d-255e2059655e  Adele Vance           AdeleV@contoso.OnMicrosoft.com        Member
   ```
 
   </TabItem>
